--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1,4 +1,5 @@
 {
+  "+0yxlR": "Function display",
   "+20fdv": "Invalid properties '{0}' for authentication type '{1}'.",
   "+3efoo": "No schema is added",
   "+DxBpE": "Failed loading the schema. Please try again.",
@@ -9,7 +10,6 @@
   "+iMTt7": "Check to select this connection",
   "+lpuMl": "Required. The value to return if the expression is 'false'.",
   "+xiT4Q": "Pagination",
-  "/9r9ML": "Add target schema",
   "/AtN16": "(UTC+09:30) Darwin",
   "/B2CTz": "(UTC+08:00) Beijing, Chongqing, Hong Kong, Urumqi",
   "/I/U8L": "Body",
@@ -302,6 +302,7 @@
   "G0XYrd": "Required. The string that may contain the value.",
   "GAY7b8": "Returns the query from a URI",
   "GCjJnP": "Enter a valid Json.",
+  "GD3m4X": "Expanded",
   "GDUGlm": "Enter authority",
   "GLd3MU": "Required. The object to find inside the Within collection.",
   "GXXLuT": "Enter a valid boolean.",
@@ -313,6 +314,7 @@
   "Gmya+V": "Not available",
   "GreYWQ": "Enter parameter name.",
   "GtDOFg": "Cancel the selection",
+  "GyUe4C": "Modify options regarding functions",
   "GzQQqH": "Array",
   "H17jEE": "URI parsing functions",
   "H1wnHr": "Required. The string to slice.",
@@ -482,7 +484,6 @@
   "RPSKbr": "Enter audience",
   "RX2Shm": "Required. The string that is split.",
   "RZ1MIN": "Switch to input entire array",
-  "RZO5Ic": "Add or replace your schemas.",
   "RhH4pF": "{minutes, plural, one {# minute} other {# minutes}}",
   "RkgScy": "6",
   "S8P4N5": "Delete",
@@ -512,6 +513,7 @@
   "TPV6j/": "Paging count invalid",
   "TUaunO": "Enter a value",
   "TX4Kdr": "Create a new connection",
+  "TY4HzZ": "Add or replace your schemas.",
   "TZv5JE": "Name",
   "Tayrub": "Raw",
   "Tb2QLA": "Client request ID",
@@ -614,6 +616,7 @@
   "ZkjTbp": "Learn more about dynamic content.",
   "ZnGRMP": "(UTC+07:00) Tomsk",
   "Zr0yTE": "Unsupported 'in' value : '{value}' in Parameter",
+  "_+0yxlR.comment": "Label for the function display radio group",
   "_+20fdv.comment": "Error message when having multiple invalid authentication properties",
   "_+3efoo.comment": "Placeholder when no schema has been added",
   "_+DxBpE.comment": "Load schema error message",
@@ -624,7 +627,6 @@
   "_+iMTt7.comment": "aria label description for check button",
   "_+lpuMl.comment": "Required value parameter to return given if function is false",
   "_+xiT4Q.comment": "title for pagination setting",
-  "_/9r9ML.comment": "Header to add target schema",
   "_/AtN16.comment": "Timezone value ",
   "_/B2CTz.comment": "Timezone value ",
   "_/I/U8L.comment": "Label text for request or response body",
@@ -917,6 +919,7 @@
   "_G0XYrd.comment": "Required text parameter to apply nthIndexOf function on",
   "_GAY7b8.comment": "Label for description of custom uriQuery Function",
   "_GCjJnP.comment": "Invalid Json",
+  "_GD3m4X.comment": "Function display radio group option for expanded",
   "_GDUGlm.comment": "Authority Placeholder Text",
   "_GLd3MU.comment": "Required object parameter to find for the contains function",
   "_GXXLuT.comment": "Error validation message",
@@ -928,6 +931,7 @@
   "_Gmya+V.comment": "Display text for when About content is not available",
   "_GreYWQ.comment": "Parameter Field Name Description",
   "_GtDOFg.comment": "Aria label description for cancel button",
+  "_GyUe4C.comment": "Description for the functions section",
   "_GzQQqH.comment": "This is an option in a dropdown where users can select type Array for their parameter.",
   "_H17jEE.comment": "Label for URI parsing functions",
   "_H1wnHr.comment": "Required string parameter to slice",
@@ -1097,7 +1101,6 @@
   "_RPSKbr.comment": "Audience Placeholder Text",
   "_RX2Shm.comment": "Required text parameter to apply split function on",
   "_RZ1MIN.comment": "Label for switching input to Text",
-  "_RZO5Ic.comment": "Label to inform the ability to replace schemas",
   "_RhH4pF.comment": "A duration of time shown in minutes",
   "_RkgScy.comment": "Hour of the day",
   "_S8P4N5.comment": "type and label to delete a value",
@@ -1127,6 +1130,7 @@
   "_TPV6j/.comment": "error message for invalid paging count",
   "_TUaunO.comment": "error displayed when no value is entered",
   "_TX4Kdr.comment": "aria label description for create button",
+  "_TY4HzZ.comment": "Description for the schema section",
   "_TZv5JE.comment": "Name Title",
   "_Tayrub.comment": "Authentication type",
   "_Tb2QLA.comment": "Label text for retry client request ID",
@@ -1312,7 +1316,6 @@
   "_faUrud.comment": "Message to show under the loading icon when loading connection parameters",
   "_fc1AV8.comment": "Callback url method",
   "_fg/34o.comment": "Label for logical functions",
-  "_fqNVDv.comment": "Back",
   "_froV/0.comment": "Timezone value ",
   "_ftwXvc.comment": "This is a status message to be shown in a monitoring view",
   "_g0a4Qe.comment": "Accessibility Label for the dictionary text value field",
@@ -1411,6 +1414,7 @@
   "_lIPWQ6.comment": "Timezone value ",
   "_lPTdSf.comment": "Button text for run trigger",
   "_lQNKUB.comment": "Describes connection being added",
+  "_lR7V87.comment": "Section header for the functions section",
   "_lV77P8.comment": "Type Title",
   "_lZT0JI.comment": "Button to add group",
   "_lcVG4C.comment": "skipped run",
@@ -1537,6 +1541,7 @@
   "_syiNc+.comment": "Browse for file",
   "_sys5gu.comment": "Authentication type",
   "_t+XCkg.comment": "Required string parameter for destination time zone",
+  "_tAeKNh.comment": "Function display radio group option for simple",
   "_tE7Zam.comment": "Label for description of custom listCallbackUrl Function",
   "_tELkSC.comment": "Timezone value ",
   "_tH2pT1.comment": "Text for the Details page navigation heading",
@@ -1606,11 +1611,11 @@
   "_wmDUGV.comment": "Label for description of custom convertToUtc Function",
   "_wmw/ai.comment": "Label for description of custom union Function",
   "_woJQhv.comment": "Label text for callback URL",
-  "_woq0x0.comment": "Header to add source schema",
   "_wzEneQ.comment": "Close",
   "_x+6ccf.comment": "Day of the week",
   "_x0or2o.comment": "Required collection parameter to apply length Function",
   "_x10E1p.comment": "Display name for status code in outputs",
+  "_xC1zg3.comment": "Section header for the schema section",
   "_xFQXAI.comment": "Button text for the control-Z button combination to undo the last action",
   "_xJ6vjn.comment": "Label for description of custom uriComponentToString Function",
   "_xLF2Zr.comment": "Button to add row",
@@ -1737,7 +1742,6 @@
   "faUrud": "Loading connection data...",
   "fc1AV8": "HTTP {method} URL",
   "fg/34o": "Logical functions",
-  "fqNVDv": "Back",
   "froV/0": "(UTC+04:30) Kabul",
   "ftwXvc": "Ignored",
   "g0a4Qe": "Value",
@@ -1836,6 +1840,7 @@
   "lIPWQ6": "(UTC+07:00) Bangkok, Hanoi, Jakarta",
   "lPTdSf": "Run trigger",
   "lQNKUB": "A line for the parent element is added automatically.",
+  "lR7V87": "Functions",
   "lV77P8": "Title",
   "lZT0JI": "Add Group",
   "lcVG4C": "is skipped",
@@ -1962,6 +1967,7 @@
   "syiNc+": "Browse",
   "sys5gu": "Client Certificate",
   "t+XCkg": "Required. A string that contains the time zone name of the destination time zone. See https://msdn.microsoft.com/en-us/library/gg154758.aspx for details.",
+  "tAeKNh": "Simple",
   "tE7Zam": "Returns the URL to invoke the trigger or action",
   "tELkSC": "(UTC-06:00) Guadalajara, Mexico City, Monterrey",
   "tH2pT1": "Return to search",
@@ -2031,11 +2037,11 @@
   "wmDUGV": "Converts a string timestamp passed in from a source time zone to UTC",
   "wmw/ai": "Returns a single array or object with all the elements that are in either the array or object passed to this function",
   "woJQhv": "Callback URL:",
-  "woq0x0": "Add source schema",
   "wzEneQ": "Close",
   "x+6ccf": "Wednesday",
   "x0or2o": "Required. The collection for which to get the length.",
   "x10E1p": "Status Code",
+  "xC1zg3": "Schemas",
   "xFQXAI": "Ctrl + Z",
   "xJ6vjn": "Returns a string representation of a URI encoded string",
   "xLF2Zr": "Add Row",
