Update e2e test + hook up function manifest call

--- a/libs/data-mapper/src/lib/docs/DMOverview.stories.mdx
+++ b/libs/data-mapper/src/lib/docs/DMOverview.stories.mdx
@@ -31,6 +31,12 @@ Translates any supported schema format into JSON consumed by the Data Mapper fro
 
 **Endpoint:** http://{localhost:7071}/runtime/webhooks/workflow/api/management/schemas/CBRSourceSchema/contents/schemaTree?api-version=2019-10-01-edge-preview
 
+#### Function Manifest - GET mapTransformations
+
+Responds with the list of available Functions and their metadata
+
+**Endpoint:** http://{localhost:7071}/runtime/webhooks/workflow/api/management/mapTransformations?api-version=2019-10-01-edge-preview
+
 #### Data Map XSLT generation - POST generateXslt
 
 Formats a data map with all of its connections into the XSLT (.xslt) Formats
