--- a/libs/data-mapper/src/lib/docs/DMOverview.stories.mdx
+++ b/libs/data-mapper/src/lib/docs/DMOverview.stories.mdx
@@ -12,10 +12,10 @@ To provide a graphical way to map data from a source schema to a target schema u
 
 From a fresh start, the data flow is as follows:
 
-1. .xsd (XML) schema files
-2. GET schemaTree API - takes any supported schema format (XML/JSON/etc) and returns it as JSON
-3. Internal state management of schema/schemaExtended
-4. onSave - save the locally serialized data map definition (YAML) and API-generated XSLT data map
+1. The `GET schemaTree` API translates supported schema files into a common JSON format. Additionally, an existing map definition may be loaded in at this step which will deserialize into connections
+2. Connections between source schema, target schema, and function nodes are managed internally
+3. The data map definition (YAML) is continuously serialized based on the above connections
+4. On saving, the map definition is both outputted itself, and sent to the `generateXslt` API to generate the data map XSLT file
 
 ## Backend
 
@@ -30,6 +30,12 @@ Test data (XSLTs, map definitions, schemas, etc.) to be utilized within Data Map
 Translates any supported schema format into JSON consumed by the Data Mapper frontend
 
 **Endpoint:** http://{localhost:7071}/runtime/webhooks/workflow/api/management/schemas/CBRSourceSchema/contents/schemaTree?api-version=2019-10-01-edge-preview
+
+#### Function Manifest - GET mapTransformations
+
+Responds with the list of available Functions and their metadata
+
+**Endpoint:** http://{localhost:7071}/runtime/webhooks/workflow/api/management/mapTransformations?api-version=2019-10-01-edge-preview
 
 #### Data Map XSLT generation - POST generateXslt
 
