--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -161,6 +161,7 @@
   "6oqk+A": "Previous",
   "6pd1bE": "(UTC-07:00) Arizona",
   "6qkBwz": "Required. The number to multiply Multiplicand 2 with.",
+  "6ueRYm": "Start time",
   "73iM9+": "Update source schema",
   "7GSk99": "OK",
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
@@ -610,6 +611,7 @@
   "YoQara": "None",
   "Yuu5CD": "Zoom out",
   "Z9PWl/": "Retry Policy count is invalid (Must be from {min} to {max})",
+  "ZBJiuD": "Status",
   "ZCFMoe": "Body",
   "ZM1mRy": "Concurrency Control",
   "ZME5hh": "Returns the day of month component of a string timestamp",
@@ -783,6 +785,7 @@
   "_6oqk+A.comment": "Text of a button to go to previous page",
   "_6pd1bE.comment": "Timezone value ",
   "_6qkBwz.comment": "Required number parameter to be multiplied in mul function",
+  "_6ueRYm.comment": "Start time text",
   "_73iM9+.comment": "Header to update source schema",
   "_7GSk99.comment": "OK message appearing on a confirmation dialog.",
   "_7KxCGX.comment": "Timezone value ",
@@ -1232,6 +1235,7 @@
   "_YoQara.comment": "Display text for when About Panel has no Tags",
   "_Yuu5CD.comment": "Label to zoom the canvas out",
   "_Z9PWl/.comment": "error message for invalid retry count",
+  "_ZBJiuD.comment": "Status text",
   "_ZCFMoe.comment": "Display name for body outputs",
   "_ZM1mRy.comment": "title for concurrency setting",
   "_ZME5hh.comment": "Label for description of custom dayOfMonth Function",
@@ -1307,6 +1311,7 @@
   "_dxh2CJ.comment": "timed out run",
   "_e00zot.comment": "Recurrence parameter group title",
   "_e4Onhn.comment": "This is a status message to be shown in a monitoring view",
+  "_eFet4K.comment": "Action Tracking ID text",
   "_eGa1Wa.comment": "Timezone value ",
   "_eHgi14.comment": "Required string parameter to determine variable wanted",
   "_eRvGw3.comment": "Message to show under the loading icon when loading connectors",
@@ -1458,6 +1463,7 @@
   "_n7wxxN.comment": "Search tip 2",
   "_nGds/r.comment": "Required object parameter to compare to in greaterOrEqual function",
   "_nHseED.comment": "Required integer parameter to see how far in the future",
+  "_nOWGAV.comment": "End time text",
   "_nSan4V.comment": "Reset",
   "_nTA155.comment": "Required string parameter to identify which property to remove",
   "_nZ4nLn.comment": "title for suppress workflow headers setting",
@@ -1617,6 +1623,7 @@
   "_wQsEwc.comment": "Required length parameter to obtain substring",
   "_wV3Lmd.comment": "Label to delete dictionary item",
   "_wWVQuK.comment": "Label for description of custom if Function",
+  "_wkiETV.comment": "Client Tracking ID text",
   "_wl7X0l.comment": "Label to hide the mini-map",
   "_wmDUGV.comment": "Label for description of custom convertToUtc Function",
   "_wmw/ai.comment": "Label for description of custom union Function",
@@ -1733,6 +1740,7 @@
   "dxh2CJ": "timed out",
   "e00zot": "How often do you want to check for items?",
   "e4Onhn": "Not specified",
+  "eFet4K": "Action Tracking ID",
   "eGa1Wa": "(UTC+05:00) Ekaterinburg",
   "eHgi14": "Required. The name of the variable whose value you want.",
   "eRvGw3": "Loading connectors...",
@@ -1884,6 +1892,7 @@
   "n7wxxN": "Try less specific keywords.",
   "nGds/r": "Required. The object to check if it is less than or equal to value being compared to.",
   "nHseED": "Required. The number of time units the desired time is in the future.",
+  "nOWGAV": "End time",
   "nSan4V": "Reset",
   "nTA155": "Required. The name of the property to remove.",
   "nZ4nLn": "Suppress workflow headers",
@@ -2043,6 +2052,7 @@
   "wQsEwc": "Required. The length of the substring.",
   "wV3Lmd": "Click to delete item",
   "wWVQuK": "Returns a specified value based on whether the expression resulted in true or false",
+  "wkiETV": "Client Tracking ID",
   "wl7X0l": "Hide mini-map",
   "wmDUGV": "Converts a string timestamp passed in from a source time zone to UTC",
   "wmw/ai": "Returns a single array or object with all the elements that are in either the array or object passed to this function",
