Added standalone-command bar, consumption workflow param ui

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -568,6 +568,7 @@
   "WgoP7R": "Returns the result from multiplying the two numbers",
   "WnU9v0": "A managed identity is not configured on the logic app.",
   "X4gDhV": "Tenant",
+  "X7X5ew": "Parameters",
   "X8JjjT": "{days} days {hours} hours",
   "XCunbR": "Shorthand for actions('actionName').outputs",
   "XEuptL": "Combines any number of strings together",
@@ -1185,6 +1186,7 @@
   "_WgoP7R.comment": "Label for description of custom mul Function",
   "_WnU9v0.comment": "Error message when no identity is associated",
   "_X4gDhV.comment": "Tenant Label Display Name",
+  "_X7X5ew.comment": "Workflow Parameters Title",
   "_X8JjjT.comment": "This is a time duration in full non abbreviated format",
   "_XCunbR.comment": "Label for description of custom outputs Function",
   "_XEuptL.comment": "Label for combining strings together",
@@ -1423,6 +1425,7 @@
   "_lgs5sf.comment": "label text for stateless run mode",
   "_ljAOR6.comment": "Label for description of custom body Function",
   "_lzBHHT.comment": "Error message for unknown property",
+  "_lztiwS.comment": "Parameter Field Actual Value Title",
   "_m7Y6Qf.comment": "Title for a tab panel",
   "_m8Q61y.comment": "Parameter Field Name Title",
   "_mAuMD+.comment": "Placeholder for empty collapsed array",
@@ -1454,6 +1457,7 @@
   "_ngsC44.comment": "Required object parameter to check if less than using less function",
   "_nkk1mu.comment": "Label for description of custom addMinutes Function",
   "_nx25nq.comment": "Hour of the day",
+  "_ny75Ly.comment": "Parameter Field Value Placeholder Text",
   "_o/0SEj.comment": "Label for description of custom last Function",
   "_o14STH.comment": "Required XML parameter to apply xpath function on",
   "_o1HOyf.comment": "Accessibility label telling that the user is on page {current} of {max} pages",
@@ -1477,7 +1481,6 @@
   "_pH2uak.comment": "Label to collapse",
   "_pIczsS.comment": "Label text for request end time",
   "_pOTcUO.comment": "Required object parameter to be converted to array using createArray function",
-  "_pRUJff.comment": "Create Title",
   "_pUeUDw.comment": "Timezone value ",
   "_pXmFGf.comment": "Label for description of custom xml Function",
   "_pYtSyE.comment": "Required number parameter to divide the dividend by in mod function",
@@ -1575,6 +1578,7 @@
   "_ui7GCl.comment": "Hour of the day",
   "_unMaeV.comment": "Heading section for Variable tokens",
   "_urAHv1.comment": "Hour of the day",
+  "_ut5Med.comment": "Parameter Field Default Value Title",
   "_uzsleE.comment": "Label for description of custom createArray Function",
   "_v39HKj.comment": "Label for description of custom Global Unique Identifier Function",
   "_v7ipqH.comment": "error message for deselection of last run after action",
@@ -1849,6 +1853,7 @@
   "lgs5sf": "Stateless run mode:",
   "ljAOR6": "Shorthand for actions('actionName').outputs.body",
   "lzBHHT": "Array Element {index} has unknown property {property}",
+  "lztiwS": "Actual Value",
   "m7Y6Qf": "Testing",
   "m8Q61y": "Name",
   "mAuMD+": "Enter an Array",
@@ -1880,6 +1885,7 @@
   "ngsC44": "Required. The object to check if it is less than comparing object.",
   "nkk1mu": "Adds an integer number of minutes to a string timestamp passed in",
   "nx25nq": "19",
+  "ny75Ly": "Enter default value for parameter.",
   "o/0SEj": "Returns the last element in the array or string passed in",
   "o14STH": "Required. The XML on which to evaluate the XPath expression.",
   "o1HOyf": "{current_page} of {max_page}",
@@ -1903,7 +1909,6 @@
   "pH2uak": "Collapse",
   "pIczsS": "End time",
   "pOTcUO": "Required. The values to combine into an array.",
-  "pRUJff": "Parameters",
   "pUeUDw": "(UTC+09:00) Osaka, Sapporo, Tokyo",
   "pXmFGf": "Covert the input to an Xml type value",
   "pYtSyE": "Required. The number to divide the Dividend by. After the division, the remainder is taken.",
@@ -2001,6 +2006,7 @@
   "ui7GCl": "16",
   "unMaeV": "Variables",
   "urAHv1": "4",
+  "ut5Med": "Default Value",
   "uzsleE": "Creates an array from the parameters",
   "v39HKj": "Generates a globally unique string (GUID)",
   "v7ipqH": "Each action must have one or more run after configurations",
