More tweaks to get workflow parameters working correctly for consumption

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -1391,6 +1391,7 @@
   "_juR40n.comment": "label for request options input",
   "_juvF+0.comment": "Gateway dropdown label",
   "_k/oqFL.comment": "Required base64 string parameter to be converted using base64ToString function",
+  "_k1N9Si.comment": "Error message when the workflow parameter value is empty.",
   "_k41+13.comment": "This is a status message to be shown in a monitoring view",
   "_k5tGEr.comment": "This is the boolean value for Yes",
   "_kDsud+.comment": "Timezone value ",
@@ -1817,6 +1818,7 @@
   "juR40n": "Duration",
   "juvF+0": "Gateway",
   "k/oqFL": "Required. The base64 encoded string.",
+  "k1N9Si": "Must provide default value for parameter.",
   "k41+13": "Skipped",
   "k5tGEr": "Yes",
   "kDsud+": "(UTC-03:00) Cayenne, Fortaleza",
