Update properties tab content

--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -163,6 +163,7 @@
   "6qkBwz": "Required. The number to multiply Multiplicand 2 with.",
   "6ueRYm": "Start time",
   "73iM9+": "Update source schema",
+  "7Fyq1F": "No inputs",
   "7GSk99": "OK",
   "7KxCGX": "(UTC+10:30) Lord Howe Island",
   "7LmpNN": "Parameter \"{parameterName}\" cannot be found for this operation",
@@ -345,6 +346,7 @@
   "IooQu1": "Advanced options",
   "Ip7Iax": "Returns the index of the n-th occurrence of a value within a string (case-insensitive, invariant culture)",
   "IpVwYT": "Returns the first non-null object in the arguments passed in",
+  "IsVhkH": "No properties",
   "J/Kz1j": "Asynchronous Pattern",
   "J5/7vN": "Converts a string to lowercase using the casing rules of the invariant culture",
   "J55HA9": "Invalid operation. Number of items: {length}.",
@@ -450,6 +452,7 @@
   "P6I90y": "Input",
   "P8ZBF9": "Required. The collection to take the first object from.",
   "PBvR9Q": "(UTC-03:00) Araguaina",
+  "PE1tsI": "No outputs",
   "PF87Ew": "Succeeded",
   "PKMkb/": "Required. The number to add to Summand 1.",
   "PORNMZ": "Inputs",
@@ -787,6 +790,7 @@
   "_6qkBwz.comment": "Required number parameter to be multiplied in mul function",
   "_6ueRYm.comment": "Start time text",
   "_73iM9+.comment": "Header to update source schema",
+  "_7Fyq1F.comment": "No inputs text",
   "_7GSk99.comment": "OK message appearing on a confirmation dialog.",
   "_7KxCGX.comment": "Timezone value ",
   "_7LmpNN.comment": "Error message to show in dropdown when dependent parameter is not found",
@@ -969,6 +973,7 @@
   "_IooQu1.comment": "Advanced options",
   "_Ip7Iax.comment": "Label for description of custom nthIndexOf Function",
   "_IpVwYT.comment": "Label for description of custom coalesce Function",
+  "_IsVhkH.comment": "No properties text",
   "_J/Kz1j.comment": "title for async pattern setting",
   "_J5/7vN.comment": "Label for description of custom toLower Function",
   "_J55HA9.comment": "Exception message for invalid formdata operation.",
@@ -1074,6 +1079,7 @@
   "_P6I90y.comment": "Input",
   "_P8ZBF9.comment": "Required collection parameter to apply first function on",
   "_PBvR9Q.comment": "Timezone value ",
+  "_PE1tsI.comment": "No utputs text",
   "_PF87Ew.comment": "This is a status message to be shown in a monitoring view",
   "_PKMkb/.comment": "Required number parameter to be summed in add function",
   "_PORNMZ.comment": "Inputs text",
