--- a/Localize/lang/strings.json
+++ b/Localize/lang/strings.json
@@ -120,6 +120,7 @@
   "4/kJ8D": "(UTC+04:00) Yerevan",
   "45ubha": "Authentication",
   "47kOXr": "Required. The lowest integer that can be returned.",
+  "4BH9uU": "Errors",
   "4BrA0z": "Required. The number of days to add. Can be negative to subtract days.",
   "4Ekn9t": "Undo",
   "4IS4yp": "Retry Policy",
@@ -305,6 +306,7 @@
   "GD3m4X": "Expanded",
   "GDUGlm": "Enter authority",
   "GLd3MU": "Required. The object to find inside the Within collection.",
+  "GUdmgm": "Close the map checker",
   "GXXLuT": "Enter a valid boolean.",
   "GYvF54": "Referencing functions",
   "GcG0qf": "Returns true if the parameters are false",
@@ -348,6 +350,7 @@
   "J9wWry": "Parameters",
   "JErLDT": "Delete",
   "JNQHws": "Required. A string that contains the time.",
+  "JOs7It": "Map Checker",
   "JSfWJ0": "Required. The value that is converted to a boolean.",
   "JWl/LD": "Add new item",
   "Jaz3EC": "Converts a string timestamp passed in from a source time zone to a target time zone",
@@ -737,6 +740,7 @@
   "_4/kJ8D.comment": "Timezone value ",
   "_45ubha.comment": "Authentication Label Display Name",
   "_47kOXr.comment": "Required integer parameter to be used as lower bound for rand function",
+  "_4BH9uU.comment": "Error section title",
   "_4BrA0z.comment": "Required integer parameter to subtract days from time",
   "_4Ekn9t.comment": "Undo",
   "_4IS4yp.comment": "title for retry policy setting",
@@ -922,6 +926,7 @@
   "_GD3m4X.comment": "Function display radio group option for expanded",
   "_GDUGlm.comment": "Authority Placeholder Text",
   "_GLd3MU.comment": "Required object parameter to find for the contains function",
+  "_GUdmgm.comment": "Map checker close button",
   "_GXXLuT.comment": "Error validation message",
   "_GYvF54.comment": "Label for referencing functions",
   "_GcG0qf.comment": "Label for description of custom not Function",
@@ -965,6 +970,7 @@
   "_J9wWry.comment": "Heading section for Parameter tokens",
   "_JErLDT.comment": "Delete label",
   "_JNQHws.comment": "Required string parameter that contains the time",
+  "_JOs7It.comment": "Button text for open the map checker",
   "_JSfWJ0.comment": "Required parameter to be converted using bool function",
   "_JWl/LD.comment": "Label to add item to array editor",
   "_Jaz3EC.comment": "Label for description of custom convertTimeZone Function",
@@ -1251,6 +1257,7 @@
   "_bS5DyV.comment": "Timezone value ",
   "_bTrk+S.comment": "Required object parameter to compare to in lessOrEqual function",
   "_bWBMhe.comment": "description of concurrency setting",
+  "_bXFGpe.comment": "Info section title",
   "_ba9yGJ.comment": "Button text for loading more runs",
   "_bf7078.comment": "Label for description of custom max Function",
   "_bnStSJ.comment": "Timezone value ",
@@ -1293,6 +1300,7 @@
   "_dqgt9y.comment": "Label for description of custom bool Function",
   "_drM9Sl.comment": "Label for description of custom formDataMultiValues Function",
   "_dsz+Ae.comment": "Label for description of custom split Function",
+  "_dwrqEc.comment": "Warnings section title",
   "_dxh2CJ.comment": "timed out run",
   "_e00zot.comment": "Recurrence parameter group title",
   "_e4Onhn.comment": "This is a status message to be shown in a monitoring view",
@@ -1378,6 +1386,7 @@
   "_j5z8Vd.comment": "Label for array connection",
   "_jA6Wrp.comment": "label to inform to upload or select target schema to be used",
   "_jHHF/u.comment": "Label for description of custom rand Function",
+  "_jHKc3w.comment": "Other section title",
   "_jKsMS6.comment": "Required expression parameter to apply not function",
   "_jMLmag.comment": "Button to add a new connection",
   "_jQ0Aqj.comment": "Required parameter to be converted using string function",
@@ -1407,6 +1416,7 @@
   "_klpJg1.comment": "Username Placeholder Text",
   "_kneb9/.comment": "Timezone value ",
   "_knylNW.comment": "Required integer parameter to be used as upper bound for rand function",
+  "_kramI/.comment": "Map checker title",
   "_kuFK3E.comment": "Invalid authentication without type property",
   "_kxMDyM.comment": "Error validation message",
   "_l36V56.comment": "This is a time duration in full non abbreviated format",
@@ -1678,6 +1688,7 @@
   "bS5DyV": "(UTC+02:00) Kaliningrad",
   "bTrk+S": "Required. The object to check if it is greater than or equal to value being compared to.",
   "bWBMhe": "By default, Logic App instances run at the same time, or in parallel. This control changes how new runs are queued and can't be changed after enabling. To run as many parallel instances as possible, leave this control turned off. To limit the number of parallel runs, turn on this control, and select a limit. To run sequentially, select 1 as the limit.",
+  "bXFGpe": "Info",
   "ba9yGJ": "Load more",
   "bf7078": "Returns the maximum value in the input array of numbers",
   "bnStSJ": "(UTC+05:30) Chennai, Kolkata, Mumbai, New Delhi",
@@ -1720,6 +1731,7 @@
   "dqgt9y": "Convert the parameter to a Boolean",
   "drM9Sl": "Returns an array of values matching the key name from form-data or form-encoded action output",
   "dsz+Ae": "Splits the string using a separator",
+  "dwrqEc": "Warnings",
   "dxh2CJ": "timed out",
   "e00zot": "How often do you want to check for items?",
   "e4Onhn": "Not specified",
@@ -1805,6 +1817,7 @@
   "j5z8Vd": "Repeating",
   "jA6Wrp": "Add or select a target schema to use for your map.",
   "jHHF/u": "Returns a random integer from a specified range, which is inclusive only at the starting end.",
+  "jHKc3w": "Other",
   "jKsMS6": "Required. The expression that will be negated.",
   "jMLmag": "Create New",
   "jQ0Aqj": "Required. The value that is converted to a string.",
@@ -1834,6 +1847,7 @@
   "klpJg1": "Enter username",
   "kneb9/": "(UTC-12:00) International Date Line West",
   "knylNW": "Required. This value is the next integer after the highest integer that could be returned.",
+  "kramI/": "Map checker",
   "kuFK3E": "Missing authentication type property: 'type'.",
   "kxMDyM": "Enter a valid json.",
   "l36V56": "{hours} hours {minutes} minutes",
